--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .card {
   width: 90%;
   max-width: 470px;
-  background: linear-gradient(135deg, #00feba, #5b548a);
+  background: linear-gradient(135deg, #0e8061, #655ba3);
   color: #fff;
   margin: 20px auto;
   border-radius: 20px;
@@ -88,4 +88,17 @@ body {
 .wind {
   font-size: 28px;
   margin-top: -6px;
+}
+
+.weather {
+  display: none;
+}
+
+.error {
+  text-align: left;
+  margin-left: 10px;
+  font-size: 30px;
+  margin-top: 10px;
+  display: none;
+  color: red;
 }
